More split client progress.

--- a/src/gwt/people.gwt.xml.in
+++ b/src/gwt/people.gwt.xml.in
@@ -23,9 +23,12 @@
   <source path="com/threerings/msoy/group/gwt"/>
   <source path="com/threerings/msoy/stuff/gwt"/>
   <source path="com/threerings/msoy/mail/gwt"/>
+  <source path="com/threerings/msoy/badge/data/all"/>
   <source path="com/threerings/msoy/person/gwt"/>
+  <source path="com/threerings/msoy/profile/gwt"/>
 
   <source path="client/people"/>
+  <source path="client/person"/>
   <source path="client/games"/>
   <source path="client/mail"/>
   <source path="client/msgs"/>
