Find most jar files in lib or extlibs/java, leaving only three remaining dependencies in dist/lib. Three is a lot more than zero, but I think this is still an improvement.

--- a/.classpath
+++ b/.classpath
@@ -4,82 +4,96 @@
 	<classpathentry excluding="com/kisgergely/gwt/canvas/test/**" kind="src" path="projects/gwt-canvas/src/java"/>
 	<classpathentry excluding="**/.svn/**|com/kisgergely/**|com/threerings/io/**|com/threerings/presents/**|com/threerings/util/**" kind="src" path="src/gwt"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="dist/lib/abimporter.jar"/>
-	<classpathentry kind="lib" path="dist/lib/activation.jar"/>
-	<classpathentry kind="lib" path="dist/lib/antisamy-bin.1.0.jar"/>
-	<classpathentry kind="lib" path="dist/lib/aperture-2006.1-alpha-3.jar"/>
-	<classpathentry kind="lib" path="dist/lib/aperture-test-2006.1-alpha-3.jar"/>
-	<classpathentry kind="lib" path="dist/lib/applewrapper-0.1.jar"/>
-	<classpathentry kind="lib" path="dist/lib/args4j-2.0.7.jar"/>
-	<classpathentry kind="lib" path="dist/lib/asc.jar"/>
-	<classpathentry kind="lib" path="dist/lib/batik-css.jar"/>
-	<classpathentry kind="lib" path="dist/lib/batik-util.jar"/>
-	<classpathentry kind="lib" path="dist/lib/bcmail-jdk14-132.jar"/>
-	<classpathentry kind="lib" path="dist/lib/bcprov-jdk14-132.jar"/>
-	<classpathentry kind="lib" path="dist/lib/commons-beanutils.jar"/>
-	<classpathentry kind="lib" path="dist/lib/commons-codec.jar"/>
-	<classpathentry kind="lib" path="dist/lib/commons-collections.jar"/>
-	<classpathentry kind="lib" path="dist/lib/commons-digester.jar"/>
-	<classpathentry kind="lib" path="dist/lib/commons-fileupload.jar"/>
-	<classpathentry kind="lib" path="dist/lib/commons-httpclient.jar"/>
-	<classpathentry kind="lib" path="dist/lib/commons-io.jar"/>
-	<classpathentry kind="lib" path="dist/lib/commons-lang.jar"/>
-	<classpathentry kind="lib" path="dist/lib/commons-logging.jar"/>
-	<classpathentry kind="lib" path="dist/lib/demork-2.0.jar"/>
-	<classpathentry kind="lib" path="dist/lib/dom4j.jar"/>
-	<classpathentry kind="lib" path="dist/lib/ehcache-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/aperture/aperture-2006.1-alpha-3.jar"/>
+	<classpathentry kind="lib" path="lib/aperture/aperture-test-2006.1-alpha-3.jar"/>
+	<classpathentry kind="lib" path="lib/aperture/applewrapper-0.1.jar"/>
+	<classpathentry kind="lib" path="lib/aperture/bcmail-jdk14-132.jar"/>
+	<classpathentry kind="lib" path="lib/aperture/bcprov-jdk14-132.jar"/>
+	<classpathentry kind="lib" path="lib/aperture/demork-2.0.jar"/>
+	<classpathentry kind="lib" path="lib/aperture/fontbox-0.1.0-dev.jar"/>
+	<classpathentry kind="lib" path="lib/aperture/htmlparser-1.6.jar"/>
+	<classpathentry kind="lib" path="lib/aperture/ical4j-cvs20061019.jar"/>
+	<classpathentry kind="lib" path="lib/aperture/jacob-1.10-pre4.jar"/>
+	<classpathentry kind="lib" path="lib/aperture/openrdf-model-2.0-alpha-3.jar"/>
+	<classpathentry kind="lib" path="lib/aperture/openrdf-util-2.0-alpha-3.jar"/>
+	<classpathentry kind="lib" path="lib/aperture/openrdf-util-crazy-debug.jar"/>
+	<classpathentry kind="lib" path="lib/aperture/openrdf-util-fixed-locking.jar"/>
+	<classpathentry kind="lib" path="lib/aperture/pdfbox-0.7.3.jar"/>
+	<classpathentry kind="lib" path="lib/aperture/poi-3.0-alpha2-20060616.jar"/>
+	<classpathentry kind="lib" path="lib/aperture/poi-contrib-3.0-alpha2-20060616.jar"/>
+	<classpathentry kind="lib" path="lib/aperture/poi-scratchpad-3.0-alpha2-20060616.jar"/>
+	<classpathentry kind="lib" path="lib/aperture/rio-2.0-alpha-3.jar"/>
+	<classpathentry kind="lib" path="lib/aperture/sesame-2.0-alpha-3.jar"/>
+	<classpathentry kind="lib" path="lib/aperture/winlaf-0.5.1.jar"/>
+	<classpathentry kind="lib" path="lib/plugin.jar"/>
+	<classpathentry kind="lib" path="lib/json.jar"/>
+	<classpathentry kind="lib" path="lib/jswiff-8.0-beta-2-threerings.jar"/>
+	<classpathentry kind="lib" path="lib/lwjgl-applet.jar"/>
+	<classpathentry kind="lib" path="lib/sdoc-0.5.0-beta-ooo.jar"/>
+	<classpathentry kind="lib" path="lib/substance-lite.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/abimporter.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/activation.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/antisamy/antisamy-bin.1.0.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/args4j-2.0.7.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/asc.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/antisamy/batik-css.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/antisamy/batik-util.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/commons-beanutils.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/commons-codec.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/commons-collections.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/commons-digester.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/commons-fileupload.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/commons-httpclient.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/commons-io.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/commons-lang.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/commons-logging.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/antisamy/dom4j.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/ehcache-1.2.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/flexTasks.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/ganymed.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/getdown.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/google-collect.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/guice.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/gwt-user.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/gwt-widgets.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/hessian.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/javassist.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/jcip-annotations.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/jetty6/jetty.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/jetty6/jetty-util.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/junit-3.7.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/junit4.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/log4j.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/mail.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/mina-core.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/mina-filter-ssl.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/mysql-connector-java.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/antisamy/nekohtml.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/ozcommons.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/postgresql-jdbc.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/proguard.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/redstone-xmlrpc.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/redstone-xmlrpc-client.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/retroweaver-all-1.2.2.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/retroweaver-rt-1.2.2.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/s3lib.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/antisamy/sac.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/servlet-api.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/slf4j-api.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/slf4j-log4j12.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/svnClientAdapter.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/svnjavahl.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/svnkit.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/svnkit-cli.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/svnkit-javahl.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/swfutils-ooo.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/velocity-1.5-dev.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/ws-commons-util.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/xercesImpl.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/xmlrpc-client.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/xmlrpc-common.jar"/>
 	<classpathentry kind="lib" path="dist/lib/facebook.jar"/>
-	<classpathentry kind="lib" path="dist/lib/flexTasks.jar"/>
-	<classpathentry kind="lib" path="dist/lib/fontbox-0.1.0-dev.jar"/>
-	<classpathentry kind="lib" path="dist/lib/ganymed.jar"/>
-	<classpathentry kind="lib" path="dist/lib/getdown.jar"/>
-	<classpathentry kind="lib" path="dist/lib/google-collect.jar"/>
-	<classpathentry kind="lib" path="dist/lib/guice.jar"/>
-	<classpathentry kind="lib" path="dist/lib/gwt-user.jar"/>
-	<classpathentry kind="lib" path="dist/lib/gwt-widgets.jar"/>
-	<classpathentry kind="lib" path="dist/lib/hessian.jar"/>
-	<classpathentry kind="lib" path="dist/lib/htmlparser-1.6.jar"/>
-	<classpathentry kind="lib" path="dist/lib/ical4j-cvs20061019.jar"/>
-	<classpathentry kind="lib" path="dist/lib/jacob-1.10-pre4.jar"/>
-	<classpathentry kind="lib" path="dist/lib/javassist.jar"/>
-	<classpathentry kind="lib" path="dist/lib/jcip-annotations.jar"/>
-	<classpathentry kind="lib" path="dist/lib/jetty.jar"/>
-	<classpathentry kind="lib" path="dist/lib/jetty-util.jar"/>
-	<classpathentry kind="lib" path="dist/lib/json.jar"/>
-	<classpathentry kind="lib" path="dist/lib/jswiff-8.0-beta-2-threerings.jar"/>
-	<classpathentry kind="lib" path="dist/lib/junit-3.7.jar"/>
-	<classpathentry kind="lib" path="dist/lib/junit4.jar"/>
-	<classpathentry kind="lib" path="dist/lib/log4j.jar"/>
-	<classpathentry kind="lib" path="dist/lib/lwjgl-applet.jar"/>
-	<classpathentry kind="lib" path="dist/lib/mail.jar"/>
-	<classpathentry kind="lib" path="dist/lib/mina-core.jar"/>
-	<classpathentry kind="lib" path="dist/lib/mina-filter-ssl.jar"/>
-	<classpathentry kind="lib" path="dist/lib/mysql-connector-java.jar"/>
-	<classpathentry kind="lib" path="dist/lib/nekohtml.jar"/>
-	<classpathentry kind="lib" path="dist/lib/openrdf-model-2.0-alpha-3.jar"/>
-	<classpathentry kind="lib" path="dist/lib/openrdf-util-2.0-alpha-3.jar"/>
-	<classpathentry kind="lib" path="dist/lib/openrdf-util-crazy-debug.jar"/>
-	<classpathentry kind="lib" path="dist/lib/openrdf-util-fixed-locking.jar"/>
-	<classpathentry kind="lib" path="dist/lib/ozcommons.jar"/>
 	<classpathentry kind="lib" path="dist/lib/panopticon-client-0.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="dist/lib/pdfbox-0.7.3.jar"/>
-	<classpathentry kind="lib" path="dist/lib/poi-3.0-alpha2-20060616.jar"/>
-	<classpathentry kind="lib" path="dist/lib/poi-contrib-3.0-alpha2-20060616.jar"/>
-	<classpathentry kind="lib" path="dist/lib/poi-scratchpad-3.0-alpha2-20060616.jar"/>
-	<classpathentry kind="lib" path="dist/lib/postgresql-jdbc.jar"/>
-	<classpathentry kind="lib" path="dist/lib/proguard.jar"/>
-	<classpathentry kind="lib" path="dist/lib/redstone-xmlrpc.jar"/>
-	<classpathentry kind="lib" path="dist/lib/redstone-xmlrpc-client.jar"/>
-	<classpathentry kind="lib" path="dist/lib/retroweaver-all-1.2.2.jar"/>
-	<classpathentry kind="lib" path="dist/lib/retroweaver-rt-1.2.2.jar"/>
-	<classpathentry kind="lib" path="dist/lib/rio-2.0-alpha-3.jar"/>
-	<classpathentry kind="lib" path="dist/lib/s3lib.jar"/>
-	<classpathentry kind="lib" path="dist/lib/sac.jar"/>
-	<classpathentry kind="lib" path="dist/lib/sdoc-0.5.0-beta-ooo.jar"/>
-	<classpathentry kind="lib" path="dist/lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="dist/lib/sesame-2.0-alpha-3.jar"/>
-	<classpathentry kind="lib" path="dist/lib/slf4j-api.jar"/>
-	<classpathentry kind="lib" path="dist/lib/slf4j-log4j12.jar"/>
 	<classpathentry kind="lib" path="dist/lib/smack-component-0.0-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="dist/lib/substance-lite.jar"/>
 	<classpathentry kind="lib" path="dist/lib/svnClientAdapter.jar"/>
@@ -96,7 +110,6 @@
 	<classpathentry kind="lib" path="dist/lib/xmlrpc-common.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/toybox"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/underwire"/>
-	<classpathentry kind="lib" path="lib/plugin.jar"/>
 	<classpathentry kind="lib" path="etc"/>
 	<classpathentry kind="output" path="dist/classes"/>
 </classpath>
