Moved shop's Marquee up to client.ui.  Someday I'll get over how cool Eclipse's refactoring tools are, but today is not that day.  I had to check the svn status of src/gwt to even find out what pages were potentially affected by the move, to make sure they got the moved bits correctly.  That's so awesome.
Also, added a marquee to the (still mostly empty) passport page.

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -113,3 +113,7 @@ permaNameConfigured = Your Permaname has been configured. Note: you must use \
 # MyRoomsPanel
 
 roomsIntro = These are all of the rooms you own. Click a room to enter it.
+
+#
+# Passport
+passportMarquee = Whirled Passport
