More progress on the split client.

--- a/src/gwt/whirleds.gwt.xml.in
+++ b/src/gwt/whirleds.gwt.xml.in
@@ -12,8 +12,15 @@
   <source path="com/threerings/msoy/data/all"/>
   <source path="com/threerings/msoy/web/data"/>
   <source path="com/threerings/msoy/web/client"/>
+  <source path="com/threerings/msoy/item/data/all"/>
+  <source path="com/threerings/msoy/item/gwt"/>
+  <source path="com/threerings/msoy/fora/gwt"/>
+  <source path="com/threerings/msoy/group/data/all"/>
+  <source path="com/threerings/msoy/group/gwt"/>
 
   <source path="client/whirleds"/>
+  <source path="client/msgs"/>
+  <source path="client/item"/>
   <source path="client/images"/>
   <source path="client/shell"/>
   <source path="client/ui"/>
