In all the time I've spent in Flex-land in the last few months, I somehow managed to forget that browser layout can be at least as big a pain in the ass as Flex layout.  How did I forget that? I have no idea... but it has been brought back to me with stunning clarity.

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -117,3 +117,5 @@ roomsIntro = These are all of the rooms you own. Click a room to enter it.
 #
 # Passport
 passportMarquee = Whirled Passport
+passportDescription = Your Whirled Passport stamps suggest fun things to do in Whirled and keep a \
+  record of the fun you''ve had along the way.  Collect them all!
