* Implemented securing / buying items using their listed currency in the money service. * Created a retry interceptor for the money service, so all the code for retrying a method on a StaleDataException is separated out from each of the methods.  Much cleaner.

--- a/.classpath
+++ b/.classpath
@@ -111,5 +111,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/toybox"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/underwire"/>
 	<classpathentry kind="lib" path="etc"/>
+	<classpathentry kind="lib" path="extlibs/java/aopalliance.jar"/>
 	<classpathentry kind="output" path="dist/classes"/>
 </classpath>
