--- a/src/gwt/people.gwt.xml.in
+++ b/src/gwt/people.gwt.xml.in
@@ -1,19 +1,9 @@
 <module>
-  <inherits name="com.google.gwt.user.User"/>
-  <inherits name="com.google.gwt.i18n.I18N"/>
   <inherits name="com.google.gwt.xml.XML"/>
+  <inherits name="page"/>
 
-  <source path="org/gwtwidgets/client"/>
   <source path="com/kisgergely/gwt/canvas/client"/>
-  <source path="com/threerings/io"/>
-  <source path="com/threerings/util"/>
-  <source path="com/threerings/presents/dobj"/>
-  <source path="com/threerings/gwt/ui"/>
-  <source path="com/threerings/gwt/util"/>
 
-  <source path="com/threerings/msoy/data/all"/>
-  <source path="com/threerings/msoy/web/data"/>
-  <source path="com/threerings/msoy/web/client"/>
   <source path="com/threerings/msoy/item/data/all"/>
   <source path="com/threerings/msoy/item/gwt"/>
   <source path="com/threerings/msoy/fora/gwt"/>
@@ -27,17 +17,12 @@
   <source path="com/threerings/msoy/person/gwt"/>
   <source path="com/threerings/msoy/profile/gwt"/>
 
-  <source path="client/people"/>
-  <source path="client/person"/>
-  <source path="client/games"/>
-  <source path="client/mail"/>
-  <source path="client/msgs"/>
   <source path="client/item"/>
-  <source path="client/images"/>
-  <source path="client/shell"/>
-  <source path="client/ui"/>
-  <source path="client/util"/>
-  <public path="public"/>
+  <source path="client/msgs"/>
+  <source path="client/mail"/>
+  <source path="client/games"/>
+  <source path="client/person"/>
+  <source path="client/people"/>
 
   <entry-point class="client.people.PeoplePage"/>
 </module>
