--- a/src/gwt/world.gwt.xml.in
+++ b/src/gwt/world.gwt.xml.in
@@ -1,18 +1,7 @@
 <module>
-  <inherits name="com.google.gwt.user.User"/>
-  <inherits name="com.google.gwt.i18n.I18N"/>
   <inherits name="com.google.gwt.xml.XML"/>
+  <inherits name="page"/>
 
-  <source path="org/gwtwidgets/client"/>
-  <source path="com/threerings/io"/>
-  <source path="com/threerings/util"/>
-  <source path="com/threerings/presents/dobj"/>
-  <source path="com/threerings/gwt/ui"/>
-  <source path="com/threerings/gwt/util"/>
-
-  <source path="com/threerings/msoy/data/all"/>
-  <source path="com/threerings/msoy/web/data"/>
-  <source path="com/threerings/msoy/web/client"/>
   <source path="com/threerings/msoy/item/data/all"/>
   <source path="com/threerings/msoy/item/gwt"/>
   <source path="com/threerings/msoy/fora/gwt"/>
@@ -22,11 +11,6 @@
   <source path="client/msgs"/>
   <source path="client/editem"/>
   <source path="client/item"/>
-  <source path="client/images"/>
-  <source path="client/shell"/>
-  <source path="client/ui"/>
-  <source path="client/util"/>
-  <public path="public"/>
 
   <entry-point class="client.world.WorldPage"/>
 </module>
