--- a/src/gwt/mail.gwt.xml.in
+++ b/src/gwt/mail.gwt.xml.in
@@ -1,32 +1,16 @@
 <module>
-  <inherits name="com.google.gwt.user.User"/>
-  <inherits name="com.google.gwt.i18n.I18N"/>
+  <inherits name="page"/>
 
-  <source path="org/gwtwidgets/client"/>
-  <source path="com/threerings/io"/>
-  <source path="com/threerings/util"/>
-  <source path="com/threerings/presents/dobj"/>
-  <source path="com/threerings/gwt/ui"/>
-  <source path="com/threerings/gwt/util"/>
-
-  <source path="com/threerings/msoy/data/all"/>
-  <source path="com/threerings/msoy/web/data"/>
-  <source path="com/threerings/msoy/web/client"/>
-  <source path="com/threerings/msoy/mail/gwt"/>
   <source path="com/threerings/msoy/item/data/all"/>
   <source path="com/threerings/msoy/item/gwt"/>
   <source path="com/threerings/msoy/stuff/gwt"/>
   <source path="com/threerings/msoy/group/data/all"/>
   <source path="com/threerings/msoy/group/gwt"/>
   <source path="com/threerings/msoy/fora/gwt"/>
+  <source path="com/threerings/msoy/mail/gwt"/>
 
-  <source path="client/mail"/>
   <source path="client/item"/>
-  <source path="client/images"/>
-  <source path="client/shell"/>
-  <source path="client/ui"/>
-  <source path="client/util"/>
-  <public path="public"/>
+  <source path="client/mail"/>
 
   <entry-point class="client.mail.MailPage"/>
 </module>
