--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -119,3 +119,4 @@ roomsIntro = These are all of the rooms you own. Click a room to enter it.
 passportMarquee = Whirled Passport
 passportDescription = Your Whirled Passport stamps suggest fun things to do in Whirled and keep a \
   record of the fun you''ve had along the way.  Collect them all!
+passportNextBar = Go for these new stamps!
