More rearranging to disentangle dependencies. Main thing was moving the comment services into a separate package so that things that want comments (games, profile, room page) don't have to include all of the forum stuff which includes all of the issues stuff and some item stuff and meatballs and a little marinara.

--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -196,3 +196,14 @@ browserClose = Close this and continue at your own risk...
 
 errUploadTooLarge = The file you are uploading is too large.
 errUploadError = An unrecoverable error occurred during the upload.
+
+
+#
+# ComplainPopup
+
+complainHeader = Register Complaint
+complainMessage = If this content is offensive or violates the Terms of Service you can file a \
+  complaint against it here.  This complaint will be read by our support staff and appropriate \
+  action taken.
+complainDesc = Please enter a short but clear reason why you are filing this complaint:
+complainNeedDescription = You must enter a description before filing a complaint
