--- a/src/gwt/people.gwt.xml.in
+++ b/src/gwt/people.gwt.xml.in
@@ -6,7 +6,7 @@
 
   <source path="com/threerings/msoy/item/data/all"/>
   <source path="com/threerings/msoy/item/gwt"/>
-  <source path="com/threerings/msoy/fora/gwt"/>
+  <source path="com/threerings/msoy/comment/gwt"/>
   <source path="com/threerings/msoy/game/data/all"/>
   <source path="com/threerings/msoy/game/gwt"/>
   <source path="com/threerings/msoy/group/data/all"/>
@@ -18,7 +18,7 @@
   <source path="com/threerings/msoy/profile/gwt"/>
 
   <source path="client/item"/>
-  <source path="client/msgs"/>
+  <source path="client/comment"/>
   <source path="client/mail"/>
   <source path="client/games"/>
   <source path="client/person"/>
