Moved DoListItemPopup to client.item as it's shared by stuff and shop. Moved some stuff related navigation to NaviUtil as it's also shared. Nixed some naughty referencing of other pages' messages and bits.

--- a/src/gwt/client/item/ItemMessages.properties
+++ b/src/gwt/client/item/ItemMessages.properties
@@ -44,3 +44,47 @@ favorite = Favorite
 
 bidPlay = Play this game...
 viewInShop = View this item in the shop
+
+#
+# DoListItemPopup
+
+doListCreateTitle = List Item in Shop
+doListUpdateTitle = Update Shop Listing
+
+doListBlurb = Listing your item creates a snapshot of your item as it is just \
+  now and adds it to the Shop.
+
+doUpdateBlurb = Updating your shop listing will replace the current listing \
+  with a new snapshot of the item as it is right now.
+
+doUpdateSalableNote = <p><b>Note</b>: people who have already purchased your item \
+  <b>will automatically switch to this version</b>. If you don''t want to change the \
+  item everyone is using, you should create and list a new item and delist this item \
+  (which can be done from this item''s Shop page).
+
+doUppriceBlurb = Here you can change the pricing of your shop listing and \
+  the pricing strategy or sales target.
+
+doListDescripHeader = Item Description
+doListNeedsDescrip = Please ensure that your item''s description is up to date.
+doUpdateNeedsDescrip = You can update your item''s shop description with \
+  information on any changes you''ve made for this update.
+
+doListPricingHeader = Item Pricing
+
+doListStrategy = Strategy:
+doListFlowCost = Coin Cost:
+doListGoldCost = Bars Cost:
+doListSalesTarget = Sales Target:
+doListHdrPrice = Listing cost:
+
+doListBtnGo = List it!
+doUpdateBtnGo = Update it!
+doListBtnCancel = Cancel
+
+doListHitLimit = This item has already reached that sales target. Either \
+  increase the target above {0} or choose a different pricing strategy.
+
+doListListed = Item listed.
+doListUpdated = Listing updated.
+doListRemixed = Item remixed.
