--- a/src/gwt/client/shop/ShopMessages.properties
+++ b/src/gwt/client/shop/ShopMessages.properties
@@ -63,6 +63,7 @@ listingDelist = Delist Item
 listingDelistConfirm = Are you sure you want to remove this shop listing?
 
 listingReprice = Reprice Item
+listingRemix = Remix
 
 listingViewOrig = View original item
 
