--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -207,3 +207,8 @@ complainMessage = If this content is offensive or violates the Terms of Service 
   action taken.
 complainDesc = Please enter a short but clear reason why you are filing this complaint:
 complainNeedDescription = You must enter a description before filing a complaint
+
+#
+# PriceLabel
+
+price = Price:
