--- a/src/gwt/support.gwt.xml.in
+++ b/src/gwt/support.gwt.xml.in
@@ -1,6 +1,10 @@
 <module>
   <inherits name="page"/>
 
+  <source path="com/threerings/underwire/gwt/client"/>
+  <source path="com/threerings/underwire/web/data"/>
+  <source path="com/threerings/underwire/web/client"/>
+
   <source path="client/support"/>
 
   <entry-point class="client.support.SupportPage"/>
