--- a/src/gwt/swiftly.gwt.xml.in
+++ b/src/gwt/swiftly.gwt.xml.in
@@ -1,6 +1,10 @@
 <module>
   <inherits name="page"/>
 
+  <source path="com/threerings/msoy/item/data/all"/>
+  <source path="com/threerings/msoy/swiftly/data/all"/>
+  <source path="com/threerings/msoy/swiftly/gwt"/>
+
   <source path="client/swiftly"/>
 
   <entry-point class="client.swiftly.SwiftlyPage"/>
