--- a/src/gwt/world.gwt.xml.in
+++ b/src/gwt/world.gwt.xml.in
@@ -2,14 +2,11 @@
   <inherits name="com.google.gwt.xml.XML"/>
   <inherits name="page"/>
 
-  <source path="com/threerings/msoy/item/data/all"/>
-  <source path="com/threerings/msoy/item/gwt"/>
-  <source path="com/threerings/msoy/fora/gwt"/>
+  <source path="com/threerings/msoy/comment/gwt"/>
   <source path="com/threerings/msoy/world/gwt"/>
 
   <source path="client/world"/>
-  <source path="client/msgs"/>
-  <source path="client/item"/>
+  <source path="client/comment"/>
 
   <entry-point class="client.world.WorldPage"/>
 </module>
