Keep log files around for a week.

--- a/etc/log4j-bureaulauncher-production.properties
+++ b/etc/log4j-bureaulauncher-production.properties
@@ -13,6 +13,7 @@ log4j.appender.fileappender.File = log/bureau-launcher.log
 log4j.appender.fileappender.DatePattern = '.'yyyy-MM-dd
 log4j.appender.fileappender.DatabaseFile = log/bureau-launcher.errdb
 log4j.appender.fileappender.Email = msoy-logs@threerings.net
+log4j.appender.fileappender.PruneDays = 7
 
 # Specify logging levels as desired
 # log4j.logger.com.threerings.foo = info
