--- a/pages/index.html.in
+++ b/pages/index.html.in
@@ -9,78 +9,30 @@
     if (document.location.host != "@SERVER_URL_HOST_PORT@") {
        document.location = "@SERVER_URL@";
     }
-    
-      /** Animate the loading message ellipsis until it is cleared */
-      function animateDots() {
-        var dots = document.getElementById('loadingDots');
-        if (dots == undefined) {
-            return;
-        }
-        
-        if (dots.innerHTML == '.') { 
-           dots.innerHTML = '..'; 
-        }
-        else if (dots.innerHTML == '..') { 
-           dots.innerHTML = '...'; 
-        }
-        else{ 
-           dots.innerHTML = '.';
-        }
-        
-        setTimeout("animateDots();", 500);
-      }
   </script>
-  
+
   <link rel="stylesheet" href="/css/global.css" type="text/css"/>
   <link rel="stylesheet" href="/css/gwt.css" type="text/css"/>
   <link rel="stylesheet" href="/css/frame.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/page.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/account.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/admin.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/games.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/help.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/item.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/landing.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/mail.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/me.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/msgs.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/person.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/people.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/shop.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/stuff.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/support.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/swiftly.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/world.css" type="text/css"/>
-  <link rel="stylesheet" href="/css/whirleds.css" type="text/css"/>
   <link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon"/>
 </head>
 
-<body onLoad="animateDots();">
-  <div id="loadingAndTests" class="loading">
-      <h2>Whirled is loading<span id="loadingDots">...</span></h2>    
+<body>
+  <div id="loading" class="loading">
+      <h2>Whirled is loading...</h2>
       <noscript><blockquote>
           Whirled requires JavaScript to operate. Please turn it on in your browser.
           <p>If you would like more information, please read our instructions on
           <a href="http://wiki.whirled.com/How_To_Enable_JavaScript">how to turn on JavaScript</a>.
       </blockquote></noscript>
   </div>
-  
-  <table id="ctable" width="100%" height="100%" cellpadding="0" cellspacing="0"
-         style="padding: 0; margin: 0;">
-  <tr><td colspan="3" id="header"></td></tr>
-  <tr><td valign="top" id="content" style="background: #FFFFFF; display: none"></td>
-      <td valign="top" id="client" height="100%"></td></tr>
-  </table>
+
+  <div id="page"></div>
+
   <iframe id="__gwt_historyFrame" style="width:0px;height:0px;border:0px;display:none"></iframe>
-  <script language="javascript" src="/gwt/msoy/msoy.nocache.js"></script>
+  <script language="javascript" src="/gwt/frame/frame.nocache.js"></script>
   <script id="swfobject" type="text/javascript"></script>
   <script id="md5" type="text/javascript"></script>
   <script id="googanal" type="text/javascript"></script>
-  @RECAPTCHA_IN@
-  <script id="recaptcha" type="text/javascript"></script>
-  <script type="text/javascript">
-    var recaptchaPublicKey = "@RECAPTCHA_KEY@";
-  </script>
-  @RECAPTCHA_OUT@
 </body>
 </html>
