--- a/build.xml
+++ b/build.xml
@@ -411,7 +411,7 @@
 
   <!-- builds our GWT web client -->
   <property name="gwtc.style" value="OBF"/>
-  <property name="pages" value="msoy,${gpages.list}"/>
+  <property name="pages" value="${gpages.list}"/>
   <target name="gclient" depends="jprepare,gmsgs"
           description="Rebuilds the GWT client (but only for Mozilla).">
     <for list="${pages}" param="page"><sequential>
