Put all of our entry points into subdirectories and name them index.html to simplify the URLs. Also do some other fiddling to prevent each pages resources from being copied to every page.

--- a/src/gwt/account.gwt.xml.in
+++ b/src/gwt/account.gwt.xml.in
@@ -3,5 +3,7 @@
 
   <source path="client/account"/>
 
+  <public path="public/account"/>
+
   <entry-point class="client.account.AccountPage"/>
 </module>
