--- a/src/gwt/landing.gwt.xml.in
+++ b/src/gwt/landing.gwt.xml.in
@@ -21,5 +21,7 @@
   <source path="client/whirleds"/>
   <source path="client/landing"/>
 
+  <public path="public/landing"/>
+
   <entry-point class="client.landing.LandingPage"/>
 </module>
