--- a/src/gwt/mail.gwt.xml.in
+++ b/src/gwt/mail.gwt.xml.in
@@ -12,5 +12,7 @@
   <source path="client/item"/>
   <source path="client/mail"/>
 
+  <public path="public/mail"/>
+
   <entry-point class="client.mail.MailPage"/>
 </module>
