--- a/src/gwt/world.gwt.xml.in
+++ b/src/gwt/world.gwt.xml.in
@@ -8,5 +8,7 @@
   <source path="client/world"/>
   <source path="client/comment"/>
 
+  <public path="public/world"/>
+
   <entry-point class="client.world.WorldPage"/>
 </module>
